--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'core:signout' %}">Logout</a>
+    {% endif %}
     <h1>Hello, World from template Inheritance!</h1>
 {% endblock content %}
