--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -4,14 +4,6 @@
     <h2>Sign-Up </h2>
     <form action="" method="POST">
         {% csrf_token %}
-
-        <div>
-            {% if messages %}
-                {% for message in messages %}
-                    <small>{{message}}</small>
-                {% endfor %}
-            {% endif %} 
-        </div>
         <div>
             <label for="">Username:</label>
             <input type="text" name="username" placeholder="Enter username" required>
@@ -29,6 +21,6 @@
         </div>
 
         <input type="submit" value="Sign up">
-        <p>Already have account <a href="#">Login</a></p>
+        <p>Already have account <a href="{% url 'core:signin' %}">Login</a></p>
     </form>
 {% endblock content %}
