--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>SocialHuB</title>
 </head>
 <body>
+    {% include 'nav.html' %}
     <div>
         {% if messages %}
             {% for message in messages %}
