--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -1,9 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Hello, World from template Inheritance!</h1>
-    {% for post in posts %}
-        <p><a href="{% url 'core:profile' post.author %}">@{{post.author}}</a></p>
+    <h2>Profile for @{{user_profile.user.username}}</h2>
+    <p><a href="{{user_profile.image.url}}"><img src="{{user_profile.image.url}}" alt="" width="300" height="300"></a></p>
+    {% if user_profile.bio %}
+        <p> <strong>ABOUT:</strong> {{user_profile.bio}}</p>
+    {% endif %}
+    {% if user_profile.location %}
+        <p><strong>LOCATION:</strong> {{user_profile.location}}</p>
+    {% endif %}
+
+    <div>
+        {% for post in posts %}
         <a href="{{post.image.url}}"><img src="{{post.image.url}}" alt="post" width="300" height="300"></a>
         
         {% if post.no_of_likes == 0 %}
@@ -25,4 +33,5 @@
         <p>Posted by <a href="{% url 'core:profile' post.author %}">{{ post.author }}</a> on {{ post.date_posted }}</p>
         <p>{{ post.caption }}</p>
     {% endfor %}
+    </div>
 {% endblock content %}
