--- a/core/templates/core/settings.html
+++ b/core/templates/core/settings.html
@@ -23,7 +23,7 @@
                 <input type="text" name="location" value="{{user_profile.location}}" placeholder="Enter your location">
             </div>
             <p>
-                <a href="{% url 'core:home' %}">Back</a>
+                <a href="{% url 'home' %}">Back</a>
                 <input type="submit" value="Save">
             </p>
         </form>
