--- a/core/templates/core/signin.html
+++ b/core/templates/core/signin.html
@@ -14,6 +14,7 @@
         </div>
 
         <input type="submit" value="Sign In">
-        <p>Don't have account? <a href="{% url 'core:signup' %}">Sign Up</a></p>
+        <p><a href="{% url 'password_reset' %}">Forgot Password</a></p>
+        <p>Don't have account? <a href="{% url 'signup' %}">Sign Up</a></p>
     </form>
 {% endblock content %}
