--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -21,6 +21,6 @@
         </div>
 
         <input type="submit" value="Sign up">
-        <p>Already have account <a href="{% url 'core:signin' %}">Login</a></p>
+        <p>Already have account <a href="{% url 'signin' %}">Login</a></p>
     </form>
 {% endblock content %}
