--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,6 +11,7 @@
         <a href="{% url 'uploadpost' %}">Create Post</a>
         <a href="{% url 'profile' request.user %}">Profile</a>
         <a href="{% url 'settings' %}">Settings</a>
+        <a href="{% url 'inbox' %}">Inbox</a>
         <a href="{% url 'signout' %}">Logout</a>
         {% endif %} 
     </p>
