--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Hello, World from template Inheritance!</h1>
-    {% for post in posts %}
+    {% for post in page_obj %}
         <p><a href="{% url 'profile' post.author %}">@{{post.author}}</a></p>
         <a href="{{post.image.url}}"><img src="{{post.image.url}}" alt="post" width="300" height="300"></a>
         
@@ -55,4 +55,27 @@
             </td>
         {% endfor %}
     {% endif %}
+<!-- Pagination links -->
+<div class="pagination">
+    <div class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <a href="?page={{ num }}"><strong>{{ num }}</strong></a>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:"3" %}
+                <a href="?page={{ num }}">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </div>
+</div>
+
 {% endblock content %}
