Feat: Add change password

--- a/core/templates/core/settings.html
+++ b/core/templates/core/settings.html
@@ -27,5 +27,6 @@
                 <input type="submit" value="Save">
             </p>
         </form>
+        <a href="{% url 'password_change' %}">Change Password</a>
     </div>
 {% endblock content %}
