--- a/core/templates/core/comments.html
+++ b/core/templates/core/comments.html
@@ -5,7 +5,8 @@
 
     {% for comment in comments %}
         <div>
-            <p><a href="{% url 'profile' comment.user.username %}"><img src="{{comment.user.profile.image.url}}" width="40" height="40">{{comment.user.username}}</a> {{comment.date_posted|timesince}} ago</p>
+            <p><a href="{% url 'profile' comment.user.username %}"><img src="{{comment.user.profile.image.url}}" width="40" height="40">{{comment.user.username}}</a>
+                 {{comment.date_posted|timesince}} ago &nbsp;<a href="{% url 'deletecomment' comment.id %}">Delete</a></p>
             <p>{{comment.content}}</p>
         </div>
     {% endfor %}
