--- a/core/templates/core/inbox.html
+++ b/core/templates/core/inbox.html
@@ -11,9 +11,11 @@
                     <a href="{% url 'message' sender.username %}">
                         <p>
                             <img src="{{ sender.profile.image.url }}" width="30" height="30">
-                            {{sender.sent_messages.count}} message from {{ sender.username }} {{ latest_message.date_sent|timesince }} ago
+                            {{sender.sent_messages.count}} message from {{ sender.username }} 
+                            {{ latest_message.date_sent|timesince }} ago
                         </p>
                     </a>
+                    &nbsp;<a href="{% url 'deleteinbox' latest_message.id %}">Delete</a>
                 </div>
             {% endwith %}
         {% endif %}
