--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -35,8 +35,10 @@
     <div>
         {% for post in page_obj %}
             {% if post.get_file_type == 'image' %}
+                <p><a href="{% url 'deletepost' post.id %}">Delete</a></p>
                 <a href="{{post.file.url}}"><img src="{{post.file.url}}" alt="post" width="300" height="300"></a>
             {% elif post.get_file_type == 'video' %}
+                <p><a href="{% url 'deletepost' post.id %}">Delete</a></p>
                 <video controls width="300" height="300">
                     <source src="{{ post.file.url }}" type="video/mp4">
                 </video>
