--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,8 @@
       rel="stylesheet"
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link id="pagestyle" href="{% static 'css/argon-dashboard.css' %}" rel="stylesheet" />
+    
     <style>
       .bell-icon {
         position: relative;
@@ -45,7 +47,34 @@
         top: -11px;
         right: 0;
       }
-    </style>
+
+      .circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  overflow: hidden;
+}
+
+.number {
+  white-space: nowrap;
+}
+
+  .post-item {
+    height: 300px; /* Adjust the height as needed */
+    overflow: hidden;
+  }
+
+  .post-item img,
+  .post-item video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+</style>
   </head>
 
 <body class="g-sidenav-show" style="background-color: rgb(228, 216, 240)">
@@ -271,6 +300,11 @@
         };
         Scrollbar.init(document.querySelector("#sidenav-scrollbar"), options);
       }
+
+      var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+          return new bootstrap.Popover(popoverTriggerEl)
+        });
     </script>
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
