--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -70,7 +70,7 @@
               <li class="nav-item dropdown pe-2 d-flex align-items-center">
                 <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  <span class="bell-icon">
+                  <span class="bell-icon m-3">
                     <i class="fa fa-bell cursor-pointer text-dark"></i>
                     <small class="text-danger fw-bolder">23</small>
                   </span>
