--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -61,7 +61,7 @@
                 </div>
             
                 <button type="button" class="btn btn-lg bg-gradient-light" data-bs-trigger="focus" data-bs-toggle="popover"
-                  data-bs-title="{{user_profile.user.username}}" data-bs-content="ABOUT: {{user_profile.bio}} I live in {{user_profile.location}}">
+                  data-bs-title="{{user_profile.user.username}}" data-bs-content="{{user_profile.bio}} I live in {{user_profile.location}}">
                   <span class="nav-link-text ms-1">About</span>
                 </button>
               </a>
@@ -134,22 +134,6 @@
                 </a>
               </li>
             {% endif %}
-          <li class="nav-item">
-            <a class="nav-link " href="{% url 'settings' %}">
-              <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="ni ni-settings text-info text-sm opacity-10"></i>
-              </div>
-              <span class="nav-link-text ms-1">Settings</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="{% url 'password_change' %}">
-              <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="ni ni-key-25 text-danger text-sm opacity-10"></i>
-              </div>
-              <span class="nav-link-text ms-1">Security</span>
-            </a>
-          </li>
         </ul>
       </div>
   </aside>
@@ -178,7 +162,7 @@
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                <span class="bell-icon">
+                <span class="bell-icon m-3">
                   <i class="fa fa-bell cursor-pointer text-dark"></i>
                   <small class="text-danger fw-bolder">23</small>
                 </span>
@@ -261,7 +245,7 @@
 
               <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
                 <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                  <a class="dropdown-item border-radius-md" href="{% url 'profile' request.user.username %}">
                     <div class="d-flex py-1">
                       <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
@@ -275,7 +259,7 @@
                   </a>
                 </li>
                 <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                  <a class="dropdown-item border-radius-md" href="{% url 'settings' %}">
                     <div class="d-flex py-1">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-settings text-success text-sm opacity-10"></i>
@@ -289,7 +273,22 @@
                   </a>
                 </li>
                 <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                  <a class="dropdown-item border-radius-md" href="{% url 'password_change' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-key-25 text-danger text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Change Password</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'signout' %}">
                     <div class="d-flex py-1">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-user-run text-danger text-sm opacity-10"></i>
@@ -325,8 +324,8 @@
     <span class="m-5">
       <a href="{{prev_url}}">
         <i class="ni ni-bold-left"></i>
+        <b>Back</b>
       </a>
-      <b>Back</b>
       <span>{{posts_count}} Post{{posts_count|pluralize}}</span>
     </span>
 
