--- a/core/templates/core/settings.html
+++ b/core/templates/core/settings.html
@@ -1,32 +1,263 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
-<h1>Settings for {{user.username}} </h1>
+ 
+  <main class="main-content position-relative border-radius-lg ">
+    <!-- Navbar -->
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
+      data-scroll="false">
+      <div class="container-fluid py-1 px-3">
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <!-- Logo (Far Left) -->
+          <a class="navbar-brand" href="{{request.META.HTTP_REFERER}}">
+            <!-- <img src="your-logo.png" alt="Logos"> -->
+            <i class="ni ni-bold-left"></i>
+          </a>
+    
+          <!-- User Profile and Notification (Far Right) -->
+          <ul class="navbar-nav">
+            <!-- Notification begins -->
+            <li class="nav-item dropdown pe-2 d-flex align-items-center">
+              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <span class="bell-icon">
+                  <i class="fa fa-bell cursor-pointer text-dark"></i>
+                  <small class="text-danger fw-bolder">23</small>
+                </span>
+              </a>
+    
+              <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                    <div class="d-flex py-1">
+                      <div class="my-auto">
+                        <img src="./assets/img/team-2.jpg" class="avatar avatar-sm  me-3 ">
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold">New message</span> from Laur
+                        </h6>
+                        <p class="text-xs text-secondary mb-0">
+                          <i class="fa fa-clock me-1"></i>
+                          13 minutes ago
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                    <div class="d-flex py-1">
+                      <div class="my-auto">
+                        <img src="./assets/img/small-logos/logo-spotify.svg"
+                          class="avatar avatar-sm bg-gradient-dark  me-3 ">
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm text-dark font-weight-normal mb-1">
+                          <span class="font-weight-bold">New album</span> by Travis Scott
+                        </h6>
+                        <p class="text-xs text-secondary mb-0">
+                          <i class="fa fa-clock me-1"></i>
+                          1 day
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                    <div class="d-flex py-1">
+                      <div class="avatar avatar-sm bg-gradient-secondary  me-3  my-auto">
+                        <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                          xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <title>credit-card</title>
+                          <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <g transform="translate(-2169.000000, -745.000000)" fill="#FFFFFF" fill-rule="nonzero">
+                              <g transform="translate(1716.000000, 291.000000)">
+                                <g transform="translate(453.000000, 454.000000)">
+                                  <path class="color-background"
+                                    d="M43,10.7482083 L43,3.58333333 C43,1.60354167 41.3964583,0 39.4166667,0 L3.58333333,0 C1.60354167,0 0,1.60354167 0,3.58333333 L0,10.7482083 L43,10.7482083 Z"
+                                    opacity="0.593633743"></path>
+                                  <path class="color-background"
+                                    d="M0,16.125 L0,32.25 C0,34.2297917 1.60354167,35.8333333 3.58333333,35.8333333 L39.4166667,35.8333333 C41.3964583,35.8333333 43,34.2297917 43,32.25 L43,16.125 L0,16.125 Z M19.7083333,26.875 L7.16666667,26.875 L7.16666667,23.2916667 L19.7083333,23.2916667 L19.7083333,26.875 Z M35.8333333,26.875 L28.6666667,26.875 L28.6666667,23.2916667 L35.8333333,23.2916667 L35.8333333,26.875 Z">
+                                  </path>
+                                </g>
+                              </g>
+                            </g>
+                          </g>
+                        </svg>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm text-dark font-weight-normal mb-1">
+                          Payment successfully completed
+                        </h6>
+                        <p class="text-xs text-secondary mb-0">
+                          <i class="fa fa-clock me-1"></i>
+                          2 days
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <!-- User Profile -->
+            <li class="nav-item dropdown pe-2 d-flex align-items-center">
+              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <img src="{{ request.user.profile.image.url }}" class="avatar avatar-sm  me-3 ">
+              </a>
+    
+              <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'home' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Home</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'profile' request.user.username %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Profile</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'settings' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-settings text-success text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Settings</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'password_change' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-key-25 text-success text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Change Password</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'signout' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="ni ni-user-run text-danger text-sm opacity-10"></i>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Logout</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+    
+              </ul>
+            </li>
+            <!-- Notification end -->
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navbar -->
 
-    <div>
-        <a href="{{ user_profile.image.url }}"> 
-            <img src="{{ user_profile.image.url }}" alt="" width="300" height="300"></a>
-        <form action="" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
+      <!-- form feed -->
+      <div class="align-items-start min-vh-25 mb-4 border-radius-lg mt-5">
+      </div>
+      <div class="container-fluid py-4">
+        <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+          <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+            <div class="card z-index-0">
+      
+              <div class="card-body">
+                <h4 class="text-center">USER SETTINGS</h4>
+                <div class="d-flex justify-content-evenly">
+                  <img src="{{ user_profile.image.url }}" class="img-fluid rounded-circle" style="width: 160px; height: 160px;">
+                </div>
+                <form role="form" action="" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  <div class="d-flex justify-content-evenly align-items-center">
+                    <label for="file-input">
+                      <i class="fa fa-camera"></i>
+                    </label>
+                    <input id="file-input" type="file" name="image">
+                  </div>
+      
+                  <div class="form-floating mb-3">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" type="text" name="bio">{{user_profile.bio}}</textarea>
+                    <label for="floatingTextarea">Bio</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="text" name="location" value="{{user_profile.location}}" class="form-control" id="floatingInputDisabled" placeholder="Location">
+                    <label for="floatingInputDisabled">Location</label>
+                  </div>
+      
+                  <div class="form-floating mb-3">
+                    <input type="url" class="form-control" id="floatingInputDisabled" placeholder="Personal Link">
+                    <label for="floatingInputDisabled">Personal Website Link</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="url" class="form-control" id="floatingInputDisabled" placeholder="Facebook Link">
+                    <label for="floatingInputDisabled">Github Link</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="url" class="form-control" id="floatingInputDisabled" placeholder="Twitter Link">
+                    <label for="floatingInputDisabled">X Link</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="url" class="form-control" id="floatingInputDisabled" placeholder="Instagram Link">
+                    <label for="floatingInputDisabled">Instagram Link</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="url" class="form-control" id="floatingInputDisabled" placeholder="Linkedin Link">
+                    <label for="floatingInputDisabled">Linkedin Link</label>
+                  </div>
+                  <div class="text-center">
+                    <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Save</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <!-- form feed end -->
+  </main>
 
-            <div>
-                <label for="">Profile Image</label>
-                <input type="file" name="image">
-            </div>
-            <div>
-                <label for="">Bio</label>
-                <textarea type="text" name="bio" id="" placeholder="Enter your bio" cols="34" rows="5">{{user_profile.bio}}</textarea>
-            </div>
-            <div>
-                <label for="">Location</label>
-                <input type="text" name="location" value="{{user_profile.location}}" placeholder="Enter your location">
-            </div>
-            <p>
-                <a href="{% url 'home' %}">Back</a>
-                <input type="submit" value="Save">
-            </p>
-        </form>
-        <a href="{% url 'password_change' %}">Change Password</a>
-    </div>
+
 {% endblock content %}
