--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,14 @@
     height: 100%;
     object-fit: cover;
   }
+
+  input[type="file"] {
+  display: none;
+}
+
+label {
+  cursor: pointer;
+}
 </style>
   </head>
 
